[package]
name = 'luau'
version = '0.1.0'
edition = '2018'
license = 'GPLv3'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ['luau-sys']

[features]
ast = ['luau-sys/ast']
compiler = ['ast', 'luau-sys/compiler']
analysis = ['ast', 'luau-sys/analysis']
vm = ['luau-sys/vm']
default = ['ast', 'compiler', 'analysis', 'vm']

[dependencies]
luau-sys = { path = 'luau-sys', version = '0.1.0' }
