[package]
name = 'luau'
version = '0.1.0'
edition = '2018'
license = 'GPLv3'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ['luau-sys']

[features]
link = ['luau-sys/link']
ast = ['luau-sys/glue', 'luau-sys/ast']
compiler = ['luau-sys/glue', 'ast', 'luau-sys/compiler']
analysis = ['luau-sys/glue', 'ast', 'luau-sys/analysis']
vm = ['luau-sys/glue', 'luau-sys/vm']
default = ['link', 'ast', 'compiler', 'analysis', 'vm']

[dependencies]
luau-sys = { path = 'luau-sys', version = '0.1.0' }
thiserror = '^1.0.30'
bstr = "~0.2.17"

[dev-dependencies]
tokio = { version = '^1.13.0', features = ['macros', 'rt'] }
