[package]
name = 'luau-sys'
description = "Raw bindings to Roblox's Luau"
version = '0.1.0'
edition = '2018'
license = 'GPLv3'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
link = []
glue = []
ast = ['glue']
compiler = ['glue', 'ast']
analysis = ['glue', 'ast']
vm = ['glue']

[dependencies]

[build-dependencies]
bindgen = "~0.59.1"
cmake = "~0.1.46"
cc = "^1.0.71"
